--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -24,5 +24,7 @@
         android:id="@+id/doneButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="onDoneButtonClick"
+        />
 </RelativeLayout>
